compiler-core/src/erlang/tests/snapshots/gleam_core__erlang__tests__use___arity_1.snap
---
source: compiler-core/src/erlang/tests/use_.rs
expression: "\npub fn main() {\n  use <- pair()\n  123\n}\n\nfn pair(f) {\n  let x = f()\n  #(x, x)\n}\n"
---
----- SOURCE CODE

pub fn main() {
  use <- pair()
  123
}

fn pair(f) {
  let x = f()
  #(x, x)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 7).
-spec pair(fun(() -> L)) -> {L, L}.
pair(F) ->
    X = F(),
{X, X}.

-file("project/test/my/mod.gleam", 2).
-spec main() -> {integer(), integer()}.
main() ->
    pair(fun() -> 123 end).
